Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/InconsistentReturn.out
InconsistentReturn.java:17:1: compiler.err.types.incompatible: I2, I1, (compiler.misc.incompatible.diff.ret: f, )
1 error
